--- a/src/business_uk.html
+++ b/src/business_uk.html
@@ -246,14 +246,15 @@
                 </li>
             </ul>
         </nav>
-        <img src="./images//logo-footer.svg" alt="logo" class="footer-logo">
+        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo">
         <p class="paragraph-3 copyright">
             © Openpay | Made in Melbourne
         </p>
     </footer>
 </div>
 
-<script src="./js/main.js"></script>
+
+<script src="./scripts/main.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
