--- a/src/business_uk.html
+++ b/src/business_uk.html
@@ -95,7 +95,7 @@
         </h2>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-blue.svg"
+                    src="./images/cart.svg"
                     alt="basket"
                     class="whatCanWeDo-item__icon"
             />
@@ -113,7 +113,7 @@
         </div>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-blue.svg"
+                    src="./images/incrise.svg"
                     alt="schedule"
                     class="whatCanWeDo-item__icon"
             />
@@ -133,7 +133,7 @@
         </div>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-blue.svg"
+                    src="./images/lock.svg"
                     alt="castle"
                     class="whatCanWeDo-item__icon"
             />
@@ -157,7 +157,7 @@
         </h2>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-dark.svg"
+                    src="./images/shop.svg"
                     alt="basket"
                     class="whatCanWeDo-item__icon"
             />
@@ -175,7 +175,7 @@
         </div>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-dark.svg"
+                    src="./images/group.svg"
                     alt="community"
                     class="whatCanWeDo-item__icon"
             />
@@ -195,7 +195,7 @@
         </div>
         <div class="whatCanWeDo-item">
             <img
-                    src="./images/basket-dark.svg"
+                    src="./images/confirm.svg"
                     alt="handshake"
                     class="whatCanWeDo-item__icon"
             />
