--- a/src/business_uk.html
+++ b/src/business_uk.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><!DOCTYPE html>
+    <!DOCTYPE html>
         <html lang="en">
         <head>
             <meta charset="UTF-8">
-            <link rel="shortcut icon" type="image/png" href="./images//favicon.png"/>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
             <title>Openpay: I'm a business - Enable new audiences</title>
             <!-- Google Tag Manager -->
             <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
