--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -39,7 +39,7 @@
     <header class="header block-child-wrap">
         <div class="header-logo-and-trigger">
             <a href="#" class="logo-link">
-                <img src="./images/logo1.svg" alt="Openpay" class="logo">
+                <img src="./images/logo-black.svg" alt="Openpay" class="logo">
             </a>
             <div class="trigger-menu">
                 <div class="trigger-menu__line"></div>
