Fix design bugs

--- a/src/business_uk.html
+++ b/src/business_uk.html
@@ -68,6 +68,11 @@
     </header>
 </div>
 <div class="introduction-wrap block-wap">
+    <div class="introduction block-child-wrap">
+        <p class="introduction-desc">
+            Open your eyes to a smarter way to pay
+        </p>
+    </div>
 </div>
 <div class="whyOpenPay-wrap block-wap">
     <img src="./images/big-o.svg" alt="bg" class="whyOpenPay-bg">
@@ -75,16 +80,20 @@
         <h1 class="title-h1 whyOpenPay-title">
             Why Openpay?
         </h1>
-        <p class="paragraph-1">
+        <p class="paragraph-1 whyOpenPay__paragraph_1">
             We’re safe, responsible and
-            transparent. Your customers are
-            our Customer's and your success is
-            our success. <br/><br/>
-
-            Made in Melbourne, Australia, our
-            proven technology will help you increase
-            sales, drive loyalty and reduce
-            product reprocessing.
+            transparent. Your customers
+            are our customers, and your
+            success is our success.
+        </p>
+        <p class="paragraph-1 whyOpenPay__paragraph_2">
+            Made by retailers, for retailers,
+            we have over 6000 online and
+            in-store partners across Australia,
+            New Zealand and now the UK. Our
+            proven technology will help you
+            increase sales, drive loyalty
+            and reduce product reprocessing.
         </p>
     </div>
 </div>
@@ -93,7 +102,7 @@
         <h2 class="title-h2 whatCanWeDo-title">
             What can we do for you?
         </h2>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_1">
             <img
                     src="./images/cart.svg"
                     alt="basket"
@@ -111,7 +120,7 @@
                 increase your AOV.
             </p>
         </div>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_2">
             <img
                     src="./images/incrise.svg"
                     alt="schedule"
@@ -131,7 +140,7 @@
                 coming back for more.
             </p>
         </div>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_3">
             <img
                     src="./images/lock.svg"
                     alt="castle"
@@ -155,7 +164,7 @@
         <h2 class="title-h2 whatCanWeDo-title">
             What can we do for your customers?
         </h2>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_4">
             <img
                     src="./images/shop.svg"
                     alt="basket"
@@ -173,7 +182,7 @@
                 they want.
             </p>
         </div>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_5">
             <img
                     src="./images/group.svg"
                     alt="community"
@@ -193,7 +202,7 @@
                 from the beginning and throughout.
             </p>
         </div>
-        <div class="whatCanWeDo-item">
+        <div class="whatCanWeDo-item whatCanWeDo-item_6">
             <img
                     src="./images/confirm.svg"
                     alt="handshake"
