--- a/src/home_uk.html
+++ b/src/home_uk.html
@@ -63,60 +63,79 @@
         </nav>
     </header>
 </div>
-<section class="banner">
-    <h1>Welcome to a smarter way to pay</h1>
-</section>
-<section class="forWhomItWorks">
-    <div>
-        <h2>Get what you want, Pay on your own terms</h2>
-        <p>Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK!</p>
-    </div>
-    <div>
-        <div class="forWhomItWorks_img_bg">
-            <p>Equal monthly Instalments.</p>
-            <p> No Hidden Fees.</p>
-            <p> No Interest, Ever.</p>
+<div class="banner-wrap block-wap">
+    <div class="banner block-child-wrap">
+        <div class="banner-content">
+            <h1>Welcome to a smarter way to pay</h1>
+            <img src="./images/home_logo.svg" alt="logo" class="banner_logo">
         </div>
     </div>
-</section>
+</div>
+<div class="forWhomItWorks-wrap block-wap">
+    <section class="forWhomItWorks">
+        <div>
+            <div class="part1__wrap-text">
+                <h2>Get what you want, pay on your own terms</h2>
+                <p>Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK!</p>
+            </div>
+        </div>
+        <div>
+            <img src="./images/big-o.svg" alt="symbol" class="forWhomItWorks_image">
+            <div class="forWhomItWorks_img_bg">
+                <p>Equal monthly Instalments.</p>
+                <p> No Hidden Fees.</p>
+                <p> No Interest, Ever.</p>
+            </div>
+        </div>
+    </section>
+</div>
 
-<section class="howItWorks">
-    <h2>How Openpay works</h2>
-    <div class="block_howItWorks_flex">
-        <div class="block_howItWorks">
-            <img src="images/cup.svg">
-            <span>Sign Up</span>
-            <span>Sign up in less than 60 seconds with a few simple details.</span>
-        </div>
-        <div class="block_howItWorks">
-            <img src="images/sneakers.svg">
-            <span>Shop Now</span>
-            <span>With any of our trusted retailer partners online and in-store.</span>
-        </div>
-        <div class="block_howItWorks">
-            <img src="images/airplane.svg">
-            <span>Pay Smarter</span>
-            <span>Pay your plan off in equal, monthly instalments, starting today.</span>
-        </div>
+<div class="howItWorks block-wap">
+    <div class="block-child-wrap">
+        <section class="howItWorks-content">
+            <h2>How Openpay works</h2>
+            <div class="block_howItWorks_flex">
+                <div class="block_howItWorks">
+                    <img src="images/cup.svg">
+                    <span>Sign Up</span>
+                    <span>Sign up in less than 90 seconds with a few simple details.</span>
+                </div>
+                <div class="block_howItWorks">
+                    <img src="images/sneakers.svg">
+                    <span>Shop Now</span>
+                    <span>With any of our trusted retailer partners online and in-store.</span>
+                </div>
+                <div class="block_howItWorks">
+                    <img src="images/airplane.svg">
+                    <span>Pay Smarter</span>
+                    <span>Pay your plan off in equal, monthly instalments, starting today.</span>
+                </div>
+            </div>
+        </section>
     </div>
-</section>
+</div>
 
-<section class="feedback">
-    <div>
-        <h2>Shop Smarter</h2>
-        <p>Interested? Sign up below to learn more.</p>
-        <input type="email" name="" placeholder="Your email">
-    </div>
-    <div>
-        <h2>You’re a Business? Let’s Chat.</h2>
-        <p>We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
-            payment solution that increases sales and conversions?</p>
-        <div class="feedback_btn_block">
-            <span>Get in touch today.</span>
-            <button>Learn More</button>
+<div class="feedback-wrap block-wap">
+    <section class="feedback">
+        <div>
+            <h2>Shop Smarter</h2>
+            <div class="feedback__Interested">
+                <p>Interested?</p>
+                <p>Sign up below to learn more.</p>
+            </div>
+            <input type="email" name="" placeholder="Your email">
         </div>
-    </div>
-</section>
+        <div>
+            <h2>You’re a Business? Let’s Chat.</h2>
+            <p>We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
+                payment solution that increases sales and conversions?</p>
+            <div class="feedback_btn_block">
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
+</div>
+
 
 <div class="footer-wrap block-wap">
     <footer class="footer block-child-wrap">
