--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -65,7 +65,7 @@
 </div>
 <div class="welcome-wrap block-wap">
     <div class="welcome block-child-wrap">
-        <img src="./images/logo.svg" alt="Openpay" class="logo">
+        <img src="./images/landing_logo.svg" alt="Openpay" class="logo">
         <p class="welcome-subtitle paragraph-1">
             Welcome to a smarter way to pay
         </p>
@@ -96,8 +96,8 @@
                     Sign Up
                 </h3>
                 <p class="work-item__desc paragraph-3">
-                    Get approved in
-                    less than 60 seconds
+                    Sign up in less
+                    than 90 seconds
                     with a few simple
                     details.
                 </p>
@@ -106,20 +106,20 @@
                 <img src="./images/Path%204497.svg" alt="shop"
                      class="work-item__icon work-item__icon_2">
                 <h3 class="work-item__title title-h3">
-                    Shop
+                    Shop Now
                 </h3>
                 <p class="work-item__desc paragraph-3">
-                    With any of our
-                    trusted retailer
-                    partners online
-                    and in-store.
+                    Add items to
+                    the basket, and
+                    select Openpay at
+                    checkout
                 </p>
             </div>
             <div class="work-item">
                 <img src="./images/Group%201428.svg" alt="simple"
                      class="work-item__icon work-item__icon_3">
                 <h3 class="work-item__title title-h3">
-                    Simple
+                    Pay Smarter
                 </h3>
                 <p class="work-item__desc paragraph-3">
                     Pay your plan
@@ -140,14 +140,44 @@
             </h2>
             <article class="empoweringPay__article">
                 <h4 class="title-h4 empoweringPay__article-title">
+                    How do I make payments?
+                </h4>
+                <p class="paragraph-4">
+                    You don’t need to worry
+                    about manually making payments,
+                    we will directly debit your
+                    account on the scheduled date.
+                </p>
+            </article>
+            <article class="empoweringPay__article">
+                <h4 class="title-h4 empoweringPay__article-title">
                     When will my next payment be due?
                 </h4>
                 <p class="paragraph-4">
-                    After your initial instalment
-                    today, your next payment will
-                    be due in 28 days. Don’t forget,
-                    you can customise this to suit
-                    your schedule.
+                    Our plans are made up
+                    of equal instalments, one
+                    month apart. Your initial
+                    instalment is paid on the
+                    day of purchase, but you
+                    can customise your second
+                    instalment date.
+                    Any instalments after this
+                    will be taken a month apart.
+                    <!--<a href="#" class="link-to"><u>here</u></a>.-->
+                </p>
+            </article>
+            <article class="empoweringPay__article">
+                <h4 class="title-h4 empoweringPay__article-title">
+                    Are there fees?
+                </h4>
+                <p class="paragraph-4">
+                    As long as you pay on time,
+                    you’ll pay no fees on top
+                    of your purchase. If you
+                    miss a payment, a late fee
+                    of £7.50 will apply. To avoid
+                    this, contact Openpay to
+                    reschedule your payment date.
                 </p>
             </article>
             <article class="empoweringPay__article">
@@ -156,15 +186,15 @@
                 </h4>
                 <p class="paragraph-4">
                     Yes, protecting your information
-                    is very important to us. Openpay
-                    is a Level 1 PCI DSS Compliant
-                    Provider. This means that all
-                    sensitive information is encrypted
-                    and we maintain stringent physical,
-                    electronic and procedural safeguards
-                    to protect your information. View the
-                    Openpay privacy policy
-                    <a href="#" class="link-to"><u>here</u></a>.
+                    is very important to us.
+                    Openpay is a Level 1 PCI
+                    DSS Compliant Provider. This
+                    means that all sensitive
+                    information is encrypted and we
+                    maintain stringent physical,
+                    electronic and procedural
+                    safeguards to protect your information.
+                    View the Openpay privacy policy <a href="#" class="link-to"><u>here</u></a>.
                 </p>
             </article>
             <article class="empoweringPay__article">
@@ -172,20 +202,7 @@
                     Will I be charged interest?
                 </h4>
                 <p class="paragraph-4">
-                    Openpay does not charge any interest. Ever.
-                </p>
-            </article>
-            <article class="empoweringPay__article">
-                <h4 class="title-h4 empoweringPay__article-title">
-                    Are there fees?
-                </h4>
-                <p class="paragraph-4">
-                    There are no establishment or
-                    payment fees. If you miss a
-                    payment, a late fee of £7.50
-                    will apply. To avoid this,
-                    contact Openpay to reschedule
-                    your payment date.
+                    Openpay does not charge any interest. <b>Ever</b>.
                 </p>
             </article>
             <article class="empoweringPay__article">
@@ -194,10 +211,11 @@
                 </h4>
                 <p class="paragraph-4">
                     All refunds will be processed
-                    through us as normal, and
-                    Openpay will cancel payments
-                    and refund what is owed. Read
-                    the full terms and conditions
+                    through us as normal. Openpay
+                    will refund you all payments
+                    made to date, and cancel your
+                    plan. Read the full terms and
+                    conditions
                     <a href="#" class="link-to"><u>here</u></a>.
                 </p>
             </article>
@@ -235,7 +253,7 @@
     </footer>
 </div>
 
-<script src="./js/main.js"></script>
+<script src="./scripts/main.js"></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
