--- a/src/index.html
+++ b/src/index.html
@@ -1,260 +1,172 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="Openpay" content="app-id=1166424403">
-	<link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
-    <title>Openpay - Buy now, Pay Smarter</title>
-	<!-- Google Tag Manager -->
-	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-				new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Openpay: I'm a business - Enable new audiences</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
 
-	<!-- 	FullStory Snippet -->
-	<script>
-	window['_fs_debug'] = false;
-	window['_fs_host'] = 'fullstory.com';
-	window['_fs_org'] = 'D6N17';
-	window['_fs_namespace'] = 'FS';
-	(function(m,n,e,t,l,o,g,y){
-	    if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-	    g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
-	    o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
-	    y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-	    g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
-	    g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
-	    g.consent=function(a){g("consent",!arguments.length||a)};
-	    g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
-	    g.clearUserCookie=function(){};
-	})(window,document,window['_fs_namespace'],'script','user');
-</script>
+    <!-- 	FullStory Snippet -->
+    <script>
+        window['_fs_debug'] = false;
+        window['_fs_host'] = 'fullstory.com';
+        window['_fs_org'] = 'D6N17';
+        window['_fs_namespace'] = 'FS';
+        (function(m,n,e,t,l,o,g,y){
+            if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
+            g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
+            o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
+            y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
+            g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
+            g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
+            g.consent=function(a){g("consent",!arguments.length||a)};
+            g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
+            g.clearUserCookie=function(){};
+        })(window,document,window['_fs_namespace'],'script','user');
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
-	<link rel="stylesheet" href="./css/nav.css" />
-	<link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/home_uk.css" />
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-    <div class="mainContent">
-		<div class="topNav">
-			<a class="mainLogo" href="index"></a>
-			<a href="how">How it works</a>
-			<a href="business">I'm a business</a>
-			<a href="help">Help & contact</a>
-			<div class="topNavRight">
-				<!--<a href="https://retailer.myopenpay.com.au/live/Account/Login/" onclick="ga('send', 'event', 'Outbound', 'Merchant Log in');">Merchant log in</a>-->
-			</div>
-		</div>
-		<!--hamburger menu-->
-		<nav role="navigation">
-			<a class="mainLogo" href="index"></a>
-			<div id="hamburgerMenu">
-				<input type="checkbox" />
-				<span></span>
-				<span></span>
-				<span></span>
-				<ul>
-					<a href="how"><li>How it works</li></a>
-					<a href="business"><li>I'm a business</li></a>
-					<a href="help"><li>Help & contact</li></a>
-					<br>
-					<!--<a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>-->
-
-				</ul>
-			</div>
-		</nav>
-		<div class="heroHomeContainer">
-			<div class="greyWithOpacity"></div>
-			<div class="heroInfo">
-				<h1>Buy now, pay smarter for your . . .</h1>
-				<div class="typeBox">
-					<h1 id='rotating-words' class="txt-rotate" data-period="2000" data-rotate='[ "car services", "glasses","new tyres","dog beds","fresh sheets","physio","bed","cat toys","blender","tents","trampoline","vet bills","new dress","sofa","vacuum","sneakers","toaster","camping gear","activewear", "window tinting","pots and pans","waffle maker" ]'></h1>
-				</div>
-			</div>
-		</div>
-		<div class="takeControl">
-			<h1>Take control of how you pay</h1>
-			<p>
-				Whether you're shopping for clothes, servicing your car or taking care of your health, have it today with more time to pay.
-                <br>
-				Interest-free, flexible payment plans for everything you want, need and love. Why pay today when you could pay smarter?
-			</p>
-		</div>
-		<div class="howItWorks">
-			<h1>How Openpay works</h1>
-			<div class="treeBanners">
-				<div class="col-3">
-					<div class="options">
-						<img src="./images/card.png" class="icon">
-						<h2>Join the club</h2>
-						<p><a href="#download">Download the app</a>, sign up and gain instant approval.</p>
-					</div>
-				</div>
-				<div class="col-3">
-					<div class="options">
-						<img src="./images/basket.png" class="icon">
-						<h2>Go shopping</h2>
-						<p>Shop online or in-store and choose Openpay at the checkout. Always interest free. </p>
-					</div>
-				</div>
-				<div class="col-3">
-					<div class="options">
-						<img src="./images/touch.png" class="icon">
-						<h2>Do it your way</h2>
-						<p>Customise your payment plan to suit you all from your Openpay app. </p>
-					</div>
-				</div>
-			</div>
-			<div class="clear"></div>
-			<div class="learnMoreWrapper">
-				<a class="button" href="how">Learn more</a>
-			</div>
-			<div class="clear"></div>
-		</div>
-		<div class="whereCanShop byCategory">
-			<h1>Сoming soon</h1>
-			<div class="fourBanners">
-				<div class="col-4">
-					<div class="marketToProvide cat-1" data-value="209002">
-						<h3>Health & wellbeing</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-2" data-value="209003">
-						<h3>Fashion</h3>
-					</div>
-				</div>
-				<!-- <div class="col-4">
-					<div class="marketToProvide cat-3" data-value="209004">
-						<h3>Lifestyle</h3>
-					</div>
-				</div> -->
-				<div class="col-4">
-					<div class="marketToProvide cat-4" data-value="209007">
-						<h3>Beauty</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-5" data-value="209008">
-						<h3>Trades & services</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-6" data-value="209001">
-						<h3>Automotive</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-7" data-value="209005">
-						<h3>Home & garden</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-8" data-value="209006">
-						<h3>Dental</h3>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="marketToProvide cat-9" data-value="209009">
-						<h3>Sports &amp; Outdoors</h3>
-					</div>
-				</div>
-				<div class="clear"></div>
-			</div>
-		</div>
-		<!--<div class="downloadApp">-->
-			<!--<a name="download"></a>-->
-			<!--<h1>Download the Openpay app</h1>-->
-			<!--<p>-->
-				<!--Browse for shops and services, manage your payment schedule and-->
-				<!--get exclusive offers from your favorite brands.-->
-			<!--</p>-->
-			<!--<div class="downloadAppWrapper">-->
-				<!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Home');">-->
-					<!--<img class="apple" src="./images/apple.svg">-->
-				<!--</a>-->
-				<!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Home');">-->
-					<!--<img class="android" src="./images/android.svg">-->
-				<!--</a>-->
-			<!--</div>-->
-		<!--</div>-->
-		<div class="instagram">
-			<h1>Join us on Instagram</h1>
-			<div class="instagramWrapper">
-				<div id="instagram"></div>
-			</div>
-		</div>
-		<!-- <div class="noInstagram"></div> -->
-		<div class="footer">
-			<div class="footerMenu">
-				<a href="how" class="footerNav">How it works</a>
-				<a href="business" class="footerNav">I'm a business</a>
-				<a href="help" class="footerNav">Help & contact</a>
-				<a href="legal" class="footerNav">Legal stuff</a>
-				<!-- <a href="https://brand.openpay.com.au" class="footerNav">Merchant resources</a> -->
-			</div>
-			<div class="socialLinks">
-				<span>
-					<a href="https://facebook.com/openpayau" class="footer-icon fb">
-						<img src="./images/social/Fb.svg">
-						Facebook
-					</a>
-					<a href="https://twitter.com/openpay_" class="footer-icon twit">
-						<img src="./images/social/Twitter.svg">
-						Twitter
-					</a>
-				</span>
-				<span>
-					<a href="https://au.linkedin.com/company/open-pay" class="footer-icon linked">
-						<img src="./images/social/in.svg">
-						LinkedIn
-					</a>
-					<a href="https://www.instagram.com/openpay_" class="footer-icon ig">
-						<img src="./images/social/Insta.svg">
-						Instagram
-					</a>
-				</span>
-			</div>
-			<!--<div class="footerAppWrapper">-->
-				<!--<a href="https://itunes.apple.com/au/app/openpay/id1166424403?mt=8" onclick="ga('send', 'event', 'App', 'iOS', 'Footer');">-->
-					<!--<img class="apple" src="./images/apple.svg">-->
-				<!--</a>-->
-				<!--<a href="https://play.google.com/store/apps/details?id=com.ocean.openpay" onclick="ga('send', 'event', 'App', 'Android', 'Footer');">-->
-					<!--<img class="android" src="./images/android.svg">-->
-				<!--</a>-->
-			<!--</div>-->
-            <div class="footerMoreLinksMenu">
-                <a href="legal" class="footerNav">Privacy</a>
-                <a href="legal" class="footerNav">Terms & Conditions</a>
-                <a href="legal" class="footerNav">User Licence</a>
-                <a href="legal" class="footerNav">PCI Data Security</a>
+<div class="header-wrap block-wap">
+    <header class="header block-child-wrap">
+        <div class="header-logo-and-trigger">
+            <a href="/" class="logo-link">
+                <img src="./images/logo-black.svg" alt="Openpay" class="logo">
+            </a>
+            <div class="trigger-menu">
+                <div class="trigger-menu__line"></div>
             </div>
-			<p>&#169; Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-			<a class="whiteLogo" href="index">
-				<img src="./images/openpay_logo_white.svg">
-			</a>
+        </div>
+        <nav class="header-nav header-nav_disable">
+            <ul class="nav-list">
+                <li>
+                    <a href="/how-it-works" class="paragraphSpec-4">How it works</a>
+                </li>
+                <li>
+                    <a href="/business" class="paragraphSpec-4">I'm a business</a>
+                </li>
+                <li>
+                    <a href="#" class="paragraphSpec-4">Help & Contact</a>
+                </li>
+            </ul>
+            <a href="#" class="header__log-in paragraphSpec-4">
+                Merchant log In
+            </a>
+        </nav>
+    </header>
+</div>
+<div class="banner-wrap block-wap">
+    <div class="banner block-child-wrap">
+        <div class="banner-content">
+            <h1>Welcome to a smarter way to pay</h1>
+            <img src="./images/home_logo.svg" alt="logo" class="banner_logo">
+        </div>
+    </div>
+</div>
+<div class="forWhomItWorks-wrap block-wap">
+    <section class="forWhomItWorks">
+        <div>
+            <div class="part1__wrap-text">
+                <h2>Get what you want, pay on your own terms</h2>
+                <p>Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK!</p>
+            </div>
+        </div>
+        <div>
+            <img src="./images/big-o.svg" alt="symbol" class="forWhomItWorks_image">
+            <div class="forWhomItWorks_img_bg">
+                <p>Equal monthly Instalments.</p>
+                <p> No Hidden Fees.</p>
+                <p> No Interest, Ever.</p>
+            </div>
+        </div>
+    </section>
+</div>
 
-		</div>
-	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="scripts/Typer.js"></script>
-	<script src="scripts/instegram.js"></script>
-	<script src="/ads.js" type="text/javascript"></script>
-	<script type="text/javascript">
+<div class="howItWorks block-wap">
+    <div class="block-child-wrap">
+        <section class="howItWorks-content">
+            <h2>How Openpay works</h2>
+            <div class="block_howItWorks_flex">
+                <div class="block_howItWorks">
+                    <img src="images/cup.svg">
+                    <span>Sign Up</span>
+                    <span>Sign up in less than 90 seconds with a few simple details.</span>
+                </div>
+                <div class="block_howItWorks">
+                    <img src="images/sneakers.svg">
+                    <span>Shop Now</span>
+                    <span>With any of our trusted retailer partners online and in-store.</span>
+                </div>
+                <div class="block_howItWorks">
+                    <img src="images/airplane.svg">
+                    <span>Pay Smarter</span>
+                    <span>Pay your plan off in equal, monthly instalments, starting today.</span>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
 
-        if(document.getElementById('ZCxqyWPOorwB')){
-            $('.instagram').show();
-            console.log('Blocking Ads: No');
-        } else {
-            $('.instagram').hide();
-            console.log('Blocking Ads: Yes');
-        }
+<div class="feedback-wrap block-wap">
+    <section class="feedback">
+        <div>
+            <h2>Shop Smarter</h2>
+            <div class="feedback__Interested">
+                <p>Interested?</p>
+                <p>Sign up below to learn more.</p>
+            </div>
+            <input type="email" name="" placeholder="Your email">
+        </div>
+        <div>
+            <h2>You’re a Business? Let’s Chat.</h2>
+            <p>We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
+                payment solution that increases sales and conversions?</p>
+            <div class="feedback_btn_block">
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
+</div>
 
 
-	</script>
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TF3JKHF"
-					  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
+<div class="footer-wrap block-wap">
+    <footer class="footer block-child-wrap">
+        <nav class="nav-footer">
+            <ul class="footer-nav-list">
+                <li>
+                    <a href="/how-it-works" class="paragraphSpec-3">How it works</a>
+                </li>
+                <li>
+                    <a href="/business" class="paragraphSpec-3">I’m a business</a>
+                </li>
+                <li>
+                    <a href="#" class="paragraphSpec-3">Contact</a>
+                </li>
+                <li>
+                    <a href="#" class="paragraphSpec-3">Legal</a>
+                </li>
+                <li>
+                    <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
+                </li>
+            </ul>
+        </nav>
+        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo">
+        <p class="paragraphSpec-3 copyright">
+            © Openpay | Made in Melbourne
+        </p>
+    </footer>
+</div>
+
+<script src="./scripts/main.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 </html>
