--- a/src/business.html
+++ b/src/business.html
@@ -100,7 +100,7 @@
 <div class="whatCanWeDo-wrap block-wap">
     <section class="whatCanWeDo-section whatCanWeDo-section_1">
         <h2 class="title-h2 whatCanWeDo-title">
-            What can we do for you?
+            What can we <br/>do for you?
         </h2>
         <div class="whatCanWeDo-item whatCanWeDo-item_1">
             <img
