--- a/src/index.html
+++ b/src/index.html
@@ -54,19 +54,19 @@
                     <a href="/business" class="paragraphSpec-4">I'm a business</a>
                 </li>
                 <li>
-                    <a href="#" class="paragraphSpec-4">Help & Contact</a>
+                    <a href="#" class="paragraphSpec-4">Contact</a>
                 </li>
             </ul>
-            <a href="#" class="header__log-in paragraphSpec-4">
+            <!-- <a href="#" class="header__log-in paragraphSpec-4">
                 Merchant log In
-            </a>
+            </a> -->
         </nav>
     </header>
 </div>
 <div class="banner-wrap block-wap">
     <div class="banner block-child-wrap">
         <div class="banner-content">
-            <h1>Welcome to a smarter way to pay</h1>
+            <h1>Welcome to a smarter way to pay.</h1>
             <img src="./images/home_logo.svg" alt="logo" class="banner_logo">
         </div>
     </div>
@@ -75,16 +75,16 @@
     <section class="forWhomItWorks">
         <div>
             <div class="part1__wrap-text">
-                <h2>Get what you want, pay on your own terms</h2>
-                <p>Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK!</p>
+                <h2>Get what you want,<br>pay on your own terms.</h2>
+                <p class="forWhomItWorks_subtitle">Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK.</p>
             </div>
         </div>
         <div>
             <img src="./images/big-o.svg" alt="symbol" class="forWhomItWorks_image">
             <div class="forWhomItWorks_img_bg">
-                <p>Equal monthly Instalments.</p>
-                <p> No Hidden Fees.</p>
-                <p> No Interest, Ever.</p>
+                <p class="forWhomItWorks_text">Equal monthly Instalments.</p>
+                <p class="forWhomItWorks_text">No Hidden Fees.</p>
+                <p class="forWhomItWorks_text">No Interest, Ever.</p>
             </div>
         </div>
     </section>
@@ -97,18 +97,18 @@
             <div class="block_howItWorks_flex">
                 <div class="block_howItWorks">
                     <img src="images/cup.svg">
-                    <span>Sign Up</span>
-                    <span>Sign up in less than 90 seconds with a few simple details.</span>
+                    <h3 class="block_howItWorks_title">Sign Up</h3>
+                    <p class="block_howItWorks_text">Sign up in less than 90 seconds with a few simple details.</p>
                 </div>
                 <div class="block_howItWorks">
                     <img src="images/sneakers.svg">
-                    <span>Shop Now</span>
-                    <span>With any of our trusted retailer partners online and in-store.</span>
+                    <h3 class="block_howItWorks_title">Shop Now</h3>
+                    <p class="block_howItWorks_text">With any of our trusted retailer partners online and in-store.</p>
                 </div>
                 <div class="block_howItWorks">
                     <img src="images/airplane.svg">
-                    <span>Pay Smarter</span>
-                    <span>Pay your plan off in equal, monthly instalments, starting today.</span>
+                    <h3 class="block_howItWorks_title">Pay Smarter</h3>
+                    <p class="block_howItWorks_text">Pay your plan off in equal, monthly instalments, starting today.</p>
                 </div>
             </div>
         </section>
@@ -118,19 +118,19 @@
 <div class="feedback-wrap block-wap">
     <section class="feedback">
         <div>
-            <h2>Shop Smarter</h2>
+            <h2 class="feedback_title">Shop Smarter</h2>
             <div class="feedback__Interested">
-                <p>Interested?</p>
-                <p>Sign up below to learn more.</p>
+                <p class="feedback_text">Interested?</p>
+                <p class="feedback_text">Sign up below to learn more.</p>
             </div>
-            <input type="email" name="" placeholder="Your email">
+            <input type="email" name="" placeholder="Your email address">
         </div>
         <div>
-            <h2>You’re a Business? Let’s Chat.</h2>
-            <p>We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
+            <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
+            <p class="feedback_text feedback_text--height">We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
                 payment solution that increases sales and conversions?</p>
             <div class="feedback_btn_block">
-                <button>Learn More</button>
+                <a href="/business" class="feedback_btn_block_link">Learn More</a>
             </div>
         </div>
     </section>
@@ -141,9 +141,9 @@
     <footer class="footer block-child-wrap">
         <nav class="nav-footer">
             <ul class="footer-nav-list">
-                <li>
+                <!-- <li>
                     <a href="/works" class="paragraphSpec-3">How it works</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="/business" class="paragraphSpec-3">I’m a business</a>
                 </li>
@@ -159,7 +159,7 @@
             </ul>
         </nav>
         <img src="./images/logo-footer.svg" alt="logo" class="footer-logo">
-        <p class="paragraphSpec-3 copyright">
+        <p class="copyright">
             © Openpay | Made in Melbourne
         </p>
     </footer>
