update styles for the Works page

--- a/src/works.html
+++ b/src/works.html
@@ -30,7 +30,7 @@
             g.clearUserCookie=function(){};
         })(window,document,window['_fs_namespace'],'script','user');
     </script>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800" rel="stylesheet">
     <link rel="stylesheet" href="css/landingpage.css" />
     <link rel="stylesheet" href="css/nav.css">
 </head>
@@ -54,12 +54,12 @@
                     <a href="/business" class="paragraphSpec-4">I'm a business</a>
                 </li>
                 <li>
-                    <a href="#" class="paragraphSpec-4">Help & Contact</a>
+                    <a href="#" class="paragraphSpec-4">Contact</a>
                 </li>
             </ul>
-            <a href="#" class="header__log-in paragraphSpec-4">
+            <!-- <a href="#" class="header__log-in paragraphSpec-4">
                 Merchant log In
-            </a>
+            </a> -->
         </nav>
     </header>
 </div>
@@ -72,7 +72,7 @@
     </div>
 </div>
 <div class="partnered-wrap block-wap">
-    <div class="partnered block-child-wrap">
+    <div class="partnered">
         <p class="paragraph-2 partnered__paragraph">
             We’ve partnered with Openpay
             to bring you more ways to pay,
@@ -84,9 +84,9 @@
     </div>
 </div>
 <div class="works-wrap block-wap">
-    <div class="works block-child-wrap">
+    <div class="works">
         <h2 class="title-h2 works-title">
-            <span>How Openpay works</span>
+            How Openpay works
         </h2>
         <div class="work-list">
             <div class="work-item">
@@ -132,8 +132,8 @@
     </div>
 </div>
 <div class="empoweringPay-wrap block-wap">
-    <img src="./images/stor.svg" alt="store" class="empoweringPay-bg-icon">
-    <div class="empoweringPay block-child-wrap">
+    <!-- <img src="./images/stor.svg" alt="store" class="empoweringPay-bg-icon"> -->
+    <div class="empoweringPay">
         <section class="empoweringPay-section">
             <h2 class="title-h2 empoweringPay-title">
                 Empowering you to pay.
@@ -163,7 +163,6 @@
                     instalment date.
                     Any instalments after this
                     will be taken a month apart.
-                    <!--<a href="#" class="link-to"><u>here</u></a>.-->
                 </p>
             </article>
             <article class="empoweringPay__article">
@@ -219,39 +218,36 @@
                     <a href="#" class="link-to"><u>here</u></a>.
                 </p>
             </article>
-            <!--<button class="btn-primary empoweringPay_btn">-->
-            <!--Sign up now-->
-            <!--</button>-->
         </section>
     </div>
 </div>
 <div class="footer-wrap block-wap">
     <footer class="footer block-child-wrap">
-        <nav class="nav-footer">
-            <ul class="footer-nav-list">
-                <li>
-                    <a href="/works" class="paragraphSpec-3">How it works</a>
-                </li>
-                <li>
-                    <a href="/business" class="paragraphSpec-3">I’m a business</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Contact</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Legal</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
-                </li>
-            </ul>
-        </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo">
-        <p class="paragraphSpec-3 copyright">
-            © Openpay | Made in Melbourne
-        </p>
+      <nav class="nav-footer">
+        <ul class="footer-nav-list">
+          <!-- <li>
+                      <a href="/works" class="paragraphSpec-3">How it works</a>
+                  </li> -->
+          <li>
+            <a href="/business" class="paragraphSpec-3">I’m a business</a>
+          </li>
+          <li>
+            <a href="#" class="paragraphSpec-3">Contact</a>
+          </li>
+          <li>
+            <a href="#" class="paragraphSpec-3">Legal</a>
+          </li>
+          <li>
+            <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
+          </li>
+        </ul>
+      </nav>
+      <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+      <p class="copyright">
+        © Openpay | Made in Melbourne
+      </p>
     </footer>
-</div>
+  </div>
 
 <script src="./scripts/main.js"></script>
 <!-- Google Tag Manager (noscript) -->
