update code style and rename css file for works page

--- a/src/business.html
+++ b/src/business.html
@@ -239,7 +239,11 @@
         <h3 class="title-h3 readyToChat-title">
           Ready to chat?
         </h3>
-        <a href="http://unbouncepages.com/openpaycontactuk/" target="_blank" class="btn-primary readyToChat-btn">
+        <a
+          href="http://unbouncepages.com/openpaycontactuk/"
+          target="_blank"
+          class="btn-primary readyToChat-btn"
+        >
           Contact Us
         </a>
       </div>
