--- a/src/index.html
+++ b/src/index.html
@@ -1,172 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay: I'm a business - Enable new audiences</title>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TF3JKHF');</script>
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-TF3JKHF');
+    </script>
 
     <!-- 	FullStory Snippet -->
     <script>
-        window['_fs_debug'] = false;
-        window['_fs_host'] = 'fullstory.com';
-        window['_fs_org'] = 'D6N17';
-        window['_fs_namespace'] = 'FS';
-        (function(m,n,e,t,l,o,g,y){
-            if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
-            g=m[e]=function(a,b){g.q?g.q.push([a,b]):g._api(a,b);};g.q=[];
-            o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
-            y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
-            g.identify=function(i,v){g(l,{uid:i});if(v)g(l,v)};g.setUserVars=function(v){g(l,v)};
-            g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
-            g.consent=function(a){g("consent",!arguments.length||a)};
-            g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
-            g.clearUserCookie=function(){};
-        })(window,document,window['_fs_namespace'],'script','user');
+      window['_fs_debug'] = false;
+      window['_fs_host'] = 'fullstory.com';
+      window['_fs_org'] = 'D6N17';
+      window['_fs_namespace'] = 'FS';
+      (function(m, n, e, t, l, o, g, y) {
+        if (e in m) {
+          if (m.console && m.console.log) {
+            m.console.log(
+              'FullStory namespace conflict. Please set window["_fs_namespace"].'
+            );
+          }
+          return;
+        }
+        g = m[e] = function(a, b) {
+          g.q ? g.q.push([a, b]) : g._api(a, b);
+        };
+        g.q = [];
+        o = n.createElement(t);
+        o.async = 1;
+        o.src = 'https://' + _fs_host + '/s/fs.js';
+        y = n.getElementsByTagName(t)[0];
+        y.parentNode.insertBefore(o, y);
+        g.identify = function(i, v) {
+          g(l, { uid: i });
+          if (v) g(l, v);
+        };
+        g.setUserVars = function(v) {
+          g(l, v);
+        };
+        g.shutdown = function() {
+          g('rec', !1);
+        };
+        g.restart = function() {
+          g('rec', !0);
+        };
+        g.consent = function(a) {
+          g('consent', !arguments.length || a);
+        };
+        g.identifyAccount = function(i, v) {
+          o = 'account';
+          v = v || {};
+          v.acctId = i;
+          g(o, v);
+        };
+        g.clearUserCookie = function() {};
+      })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,600" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,600"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/home_uk.css" />
-    <link rel="stylesheet" href="css/nav.css">
-</head>
-<body>
-<div class="header-wrap block-wap">
-    <header class="header block-child-wrap">
+    <link rel="stylesheet" href="css/nav.css" />
+  </head>
+  <body>
+    <div class="header-wrap block-wap">
+      <header class="header block-child-wrap">
         <div class="header-logo-and-trigger">
-            <a href="/" class="logo-link">
-                <img src="./images/logo-black.svg" alt="Openpay" class="logo">
-            </a>
-            <div class="trigger-menu">
-                <div class="trigger-menu__line"></div>
-            </div>
+          <a href="/" class="logo-link">
+            <img src="./images/logo-black.svg" alt="Openpay" class="logo" />
+          </a>
+          <div class="trigger-menu">
+            <div class="trigger-menu__line"></div>
+          </div>
         </div>
         <nav class="header-nav header-nav_disable">
-            <ul class="nav-list">
-                <li>
-                    <a href="/works" class="paragraphSpec-4">How it works</a>
-                </li>
-                <li>
-                    <a href="/business" class="paragraphSpec-4">I'm a business</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-4">Contact</a>
-                </li>
-            </ul>
-            <!-- <a href="#" class="header__log-in paragraphSpec-4">
+          <ul class="nav-list">
+            <li>
+              <a href="/works" class="paragraphSpec-4">How it works</a>
+            </li>
+            <li>
+              <a href="/business" class="paragraphSpec-4">I'm a business</a>
+            </li>
+            <li>
+              <a href="#" class="paragraphSpec-4">Contact</a>
+            </li>
+          </ul>
+          <!-- <a href="#" class="header__log-in paragraphSpec-4">
                 Merchant log In
             </a> -->
         </nav>
-    </header>
-</div>
-<div class="banner-wrap block-wap">
-    <div class="banner block-child-wrap">
+      </header>
+    </div>
+    <div class="banner-wrap block-wap">
+      <div class="banner block-child-wrap">
         <div class="banner-content">
-            <h1>Welcome to a smarter way to pay.</h1>
-            <img src="./images/home_logo.svg" alt="logo" class="banner_logo">
+          <h1>Welcome to a smarter way to pay.</h1>
+          <img src="./images/home_logo.svg" alt="logo" class="banner_logo" />
         </div>
+      </div>
     </div>
-</div>
-<div class="forWhomItWorks-wrap block-wap">
-    <section class="forWhomItWorks">
+    <div class="forWhomItWorks-wrap block-wap">
+      <section class="forWhomItWorks">
         <div>
-            <div class="part1__wrap-text">
-                <h2>Get what you want,<br>pay on your own terms.</h2>
-                <p class="forWhomItWorks_subtitle">Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK.</p>
-            </div>
+          <div class="part1__wrap-text">
+            <h2>Get what you want,<br />pay on your own terms.</h2>
+            <p class="forWhomItWorks_subtitle">
+              Working for Australian consumers and retailers since 2012, Openpay
+              has now landed in the UK.
+            </p>
+          </div>
         </div>
         <div>
-            <img src="./images/big-o.svg" alt="symbol" class="forWhomItWorks_image">
-            <div class="forWhomItWorks_img_bg">
-                <p class="forWhomItWorks_text">Equal monthly Instalments.</p>
-                <p class="forWhomItWorks_text">No Hidden Fees.</p>
-                <p class="forWhomItWorks_text">No Interest, Ever.</p>
-            </div>
+          <img
+            src="./images/big-o.svg"
+            alt="symbol"
+            class="forWhomItWorks_image"
+          />
+          <div class="forWhomItWorks_img_bg">
+            <p class="forWhomItWorks_text">Equal monthly Instalments.</p>
+            <p class="forWhomItWorks_text">No Hidden Fees.</p>
+            <p class="forWhomItWorks_text">No Interest, Ever.</p>
+          </div>
         </div>
-    </section>
-</div>
+      </section>
+    </div>
 
-<div class="howItWorks block-wap">
-    <div class="block-child-wrap">
+    <div class="howItWorks block-wap">
+      <div class="block-child-wrap">
         <section class="howItWorks-content">
-            <h2>How Openpay works</h2>
-            <div class="block_howItWorks_flex">
-                <div class="block_howItWorks">
-                    <img src="images/cup.svg">
-                    <h3 class="block_howItWorks_title">Sign Up</h3>
-                    <p class="block_howItWorks_text">Sign up in less than 90 seconds with a few simple details.</p>
-                </div>
-                <div class="block_howItWorks">
-                    <img src="images/sneakers.svg">
-                    <h3 class="block_howItWorks_title">Shop Now</h3>
-                    <p class="block_howItWorks_text">With any of our trusted retailer partners online and in-store.</p>
-                </div>
-                <div class="block_howItWorks">
-                    <img src="images/airplane.svg">
-                    <h3 class="block_howItWorks_title">Pay Smarter</h3>
-                    <p class="block_howItWorks_text">Pay your plan off in equal, monthly instalments, starting today.</p>
-                </div>
+          <h2>How Openpay works</h2>
+          <div class="block_howItWorks_flex">
+            <div class="block_howItWorks">
+              <img src="images/cup.svg" />
+              <h3 class="block_howItWorks_title">Sign Up</h3>
+              <p class="block_howItWorks_text">
+                Sign up in less than 90 seconds with a few simple details.
+              </p>
             </div>
+            <div class="block_howItWorks">
+              <img src="images/sneakers.svg" />
+              <h3 class="block_howItWorks_title">Shop Now</h3>
+              <p class="block_howItWorks_text">
+                With any of our trusted retailer partners online and in-store.
+              </p>
+            </div>
+            <div class="block_howItWorks">
+              <img src="images/airplane.svg" />
+              <h3 class="block_howItWorks_title">Pay Smarter</h3>
+              <p class="block_howItWorks_text">
+                Pay your plan off in equal, monthly instalments, starting today.
+              </p>
+            </div>
+          </div>
         </section>
+      </div>
     </div>
-</div>
 
-<div class="feedback-wrap block-wap">
-    <section class="feedback">
+    <div class="feedback-wrap block-wap">
+      <section class="feedback">
         <div>
-            <h2 class="feedback_title">Shop Smarter</h2>
-            <div class="feedback__Interested">
-                <p class="feedback_text">Interested?</p>
-                <p class="feedback_text">Sign up below to learn more.</p>
-            </div>
-            <input type="email" name="" placeholder="Your email address">
+          <h2 class="feedback_title">Shop Smarter</h2>
+          <div class="feedback__Interested">
+            <p class="feedback_text">Interested?</p>
+            <p class="feedback_text">Sign up below to learn more.</p>
+          </div>
+          <input type="email" name="" placeholder="Your email address" />
         </div>
         <div>
-            <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
-            <p class="feedback_text feedback_text--height">We’re in the business of offering your customers a smarter way to pay. Do you need a risk-free and seamless
-                payment solution that increases sales and conversions?</p>
-            <div class="feedback_btn_block">
-                <a href="/business" class="feedback_btn_block_link">Learn More</a>
-            </div>
+          <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
+          <p class="feedback_text feedback_text--height">
+            We’re in the business of offering your customers a smarter way to
+            pay. Do you need a risk-free and seamless payment solution that
+            increases sales and conversions?
+          </p>
+          <div class="feedback_btn_block">
+            <a href="/business" class="feedback_btn_block_link">Learn More</a>
+          </div>
         </div>
-    </section>
-</div>
+      </section>
+    </div>
 
-
-<div class="footer-wrap block-wap">
-    <footer class="footer block-child-wrap">
+    <div class="footer-wrap block-wap">
+      <footer class="footer block-child-wrap">
         <nav class="nav-footer">
-            <ul class="footer-nav-list">
-                <!-- <li>
+          <ul class="footer-nav-list">
+            <!-- <li>
                     <a href="/works" class="paragraphSpec-3">How it works</a>
                 </li> -->
-                <li>
-                    <a href="/business" class="paragraphSpec-3">I’m a business</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Contact</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Legal</a>
-                </li>
-                <li>
-                    <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
-                </li>
-            </ul>
+            <li>
+              <a href="/business" class="paragraphSpec-3">I’m a business</a>
+            </li>
+            <li>
+              <a href="#" class="paragraphSpec-3">Contact</a>
+            </li>
+            <li>
+              <a href="#" class="paragraphSpec-3">Legal</a>
+            </li>
+            <li>
+              <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
+            </li>
+          </ul>
         </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo">
+        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
         <p class="copyright">
-            © Openpay | Made in Melbourne
+          © Openpay | Made in Melbourne
         </p>
-    </footer>
-</div>
+      </footer>
+    </div>
 
-<script src="./scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </body>
 </html>
