fix styles for the home page

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -72,38 +72,10 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,600,800"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/works.css" />
+    <link rel="stylesheet" href="css/landingpage.css" />
     <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
-    <div class="header-wrap block-wap">
-      <header class="header block-child-wrap">
-        <div class="header-logo-and-trigger">
-          <a href="/" class="logo-link">
-            <img src="./images/logo-black.svg" alt="Openpay" class="logo" />
-          </a>
-          <div class="trigger-menu">
-            <div class="trigger-menu__line"></div>
-          </div>
-        </div>
-        <nav class="header-nav header-nav_disable">
-          <ul class="nav-list">
-            <li>
-              <a href="/works" class="paragraphSpec-4">How it works</a>
-            </li>
-            <li>
-              <a href="/business" class="paragraphSpec-4">I'm a business</a>
-            </li>
-            <li>
-              <a href="#" class="paragraphSpec-4">Contact</a>
-            </li>
-          </ul>
-          <!-- <a href="#" class="header__log-in paragraphSpec-4">
-                Merchant log In
-            </a> -->
-        </nav>
-      </header>
-    </div>
     <div class="welcome-wrap block-wap">
       <div class="welcome block-child-wrap">
         <img src="./images/landing_logo.svg" alt="Openpay" class="logo" />
@@ -244,33 +216,6 @@
           </article>
         </section>
       </div>
-    </div>
-    <div class="footer-wrap block-wap">
-      <footer class="footer block-child-wrap">
-        <nav class="nav-footer">
-          <ul class="footer-nav-list">
-            <!-- <li>
-                      <a href="/works" class="paragraphSpec-3">How it works</a>
-                  </li> -->
-            <li>
-              <a href="/business" class="paragraphSpec-3">I’m a business</a>
-            </li>
-            <li>
-              <a href="#" class="paragraphSpec-3">Contact</a>
-            </li>
-            <li>
-              <a href="#" class="paragraphSpec-3">Legal</a>
-            </li>
-            <li>
-              <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
-            </li>
-          </ul>
-        </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
-        <p class="copyright">
-          © Openpay | Made in Melbourne
-        </p>
-      </footer>
     </div>
 
     <script src="./scripts/main.js"></script>
