--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,6 @@
         g.clearUserCookie = function() {};
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,600"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./css/home_uk.css" />
     <link rel="stylesheet" href="css/nav.css" />
   </head>
@@ -88,9 +84,9 @@
         </div>
         <nav class="header-nav header-nav_disable">
           <ul class="nav-list">
-            <li>
+            <!-- <li>
               <a href="/works" class="paragraphSpec-4">How it works</a>
-            </li>
+            </li> -->
             <li>
               <a href="/business" class="paragraphSpec-4">I'm a business</a>
             </li>
@@ -112,25 +108,24 @@
         </div>
       </div>
     </div>
-    <div class="forWhomItWorks-wrap block-wap">
+    <div class="forWhomItWorks-wrap">
       <section class="forWhomItWorks">
-        <div>
+        <div class="forWhomItWorks_wrapper">
           <div class="part1__wrap-text">
             <h2>Get what you want,<br />pay on your own terms.</h2>
             <p class="forWhomItWorks_subtitle">
-              Working for Australian consumers and retailers since 2012, Openpay
-              has now landed in the UK.
+              Working for Australian consumers and retailers since 2012, Openpay has now landed in the UK.
             </p>
           </div>
         </div>
-        <div>
+        <div class="forWhomItWorks_wrapper">
           <img
             src="./images/big-o.svg"
             alt="symbol"
             class="forWhomItWorks_image"
           />
           <div class="forWhomItWorks_img_bg">
-            <p class="forWhomItWorks_text">Equal monthly Instalments.</p>
+            <p class="forWhomItWorks_text">Equal Monthly Instalments.</p>
             <p class="forWhomItWorks_text">No Hidden Fees.</p>
             <p class="forWhomItWorks_text">No Interest, Ever.</p>
           </div>
@@ -174,10 +169,13 @@
         <div>
           <h2 class="feedback_title">Shop Smarter</h2>
           <div class="feedback__Interested">
-            <p class="feedback_text">Interested?</p>
-            <p class="feedback_text">Sign up below to learn more.</p>
+            <p class="feedback_text">Interested? Sign up below to learn more.</p>
           </div>
-          <input type="email" name="" placeholder="Your email address" />
+          <form class="feedback_form" method="POST" action="">
+            <input type="email" name="" placeholder="Your email address" required/>
+            <button class="feedback_btn_block_link" type="submit">Sign up</button>
+          </form>
+          
         </div>
         <div>
           <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
@@ -206,9 +204,9 @@
             <li>
               <a href="#" class="paragraphSpec-3">Contact</a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#" class="paragraphSpec-3">Legal</a>
-            </li>
+            </li> -->
             <li>
               <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
             </li>
