add sign up form and privacy and terms docs

--- a/src/contact.html
+++ b/src/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Openpay I’m a business</title>
+    <title>Openpay Contact Us</title>
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
