--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Openpay: I'm a business - Enable new audiences</title>
+    <title>Openpay Welcome</title>
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -91,7 +91,7 @@
               <a href="/business" class="paragraphSpec-4">I'm a business</a>
             </li>
             <li>
-              <a href="#" class="paragraphSpec-4">Contact</a>
+              <a href="/contact" class="paragraphSpec-4">Contact us</a>
             </li>
           </ul>
           <!-- <a href="#" class="header__log-in paragraphSpec-4">
@@ -171,9 +171,15 @@
           <div class="feedback__Interested">
             <p class="feedback_text">Interested? Sign up below to learn more.</p>
           </div>
-          <form class="feedback_form" method="POST" action="">
-            <input type="email" name="" placeholder="Your email address" required/>
-            <button class="feedback_btn_block_link" type="submit">Sign up</button>
+          <form class="gform feedback_form" method="POST" action="https://script.google.com/macros/s/AKfycbynpzfHhC7WiHKCTa9a4leLQKnJUgkkpWe-QMT1/exec">
+            <div class="form-elements">
+              <input type="email" name="email" placeholder="Your email address" required/>
+              <button class="feedback_btn_block_link" type="submit">Sign up</button>
+            </div>
+            <div class="feedback_thankyou">
+              <h2><em>Thank you,</em> we'll be in touch.
+              </h2>
+             </div>
           </form>
           
         </div>
@@ -202,13 +208,13 @@
               <a href="/business" class="paragraphSpec-3">I’m a business</a>
             </li>
             <li>
-              <a href="#" class="paragraphSpec-3">Contact</a>
+              <a href="/contact" class="paragraphSpec-3">Contact us</a>
             </li>
-            <!-- <li>
-              <a href="#" class="paragraphSpec-3">Legal</a>
-            </li> -->
             <li>
-              <a href="#" class="paragraphSpec-3">Terms & Conditions</a>
+              <a href="./docs/privacy-policy.pdf" target="_blank" class="paragraphSpec-3">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="./docs/terms-conditions.pdf" target="_blank" class="paragraphSpec-3">Terms & Conditions</a>
             </li>
           </ul>
         </nav>
@@ -222,5 +228,7 @@
     <script src="./scripts/main.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script data-cfasync="false" type="text/javascript" src="./scripts/form-submission-handler.js"></script>
   </body>
 </html>
